--- a/index.html
+++ b/index.html
@@ -111,4 +111,18 @@ $(document).ready(function(){
    </div>
 
  </body>
+
+<style>
+.footer{
+    display: table;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+</style>
+
+ <footer>
+   <div class="footer">
+   <p><i>Created by Michael Chong and Aurora Basinski-Ferris</i></p>
+</footer>
 </html>
